--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,38 @@
     <title>New site</title>
 </head>
 
-<body>
+<body class="page">
+    <header class="header">
+        <div class="container ">
+            <div class="header__container">
+                <a href="" class="logo__link">
+                    <img src="image/logo.svg" alt="logo" class="logo__img">
+                </a>
+                <nav class="header__blok-menu">
+                    <a class="menu-burger-btn">
+                        <span></span>
+                    </a>
+                    <ul class="menu__list">
+                        <li class="menu__item">
+                            <a href="#" class="menu__link">Услуги</a>
+                        </li>
+                        <li class="menu__item">
+                            <a href="#" class="menu__link">Портфолио</a>
+                        </li>
+                        <li class="menu__item">
+                            <a href="#" class="menu__link">Этапы</a>
+                        </li>
+                        <li class="menu__item">
+                            <a href="#" class="menu__link">Дизайнеры</a>
+                        </li>
+                    </ul>
+                </nav>
+                <div class="header__button">
+                    <a href="#" class="button">Заказать</a>
+                </div>
+            </div>
+        </div>
+    </header>
     <script src="js/script-debug.js"></script>
 </body>
 
