--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
     //= ./includes/_head.html
-    <title>New site</title>
+    <title>Test Task Developers</title>
 </head>
 
 <body class="page">
