--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 
 <body class="page">
     <header class="header">
-        <div class="container ">
+        <div class="container container-xl container-lg">
             <div class="header__container">
                 <a href="#" class="logo__link">
                     <img src="image/logo.svg" alt="logo" class="logo__img">
@@ -39,7 +39,24 @@
         </div>
     </header>
     <main>
-
+        <section class="title-block">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 title-block__wrapp">
+                        <h1 class="title-h1">Разработка интернет-магазина
+                            с нуля за неделю</h1>
+                        <p class="subtitle title-block__subtitle">Дизайн интернет магазина, элементов микро UX, корзин,
+                            личного кабинета - от фирменного стиля
+                            до пользовательского интерфейса в сжатые сроки
+                            с командой Virtual Designers
+                        </p>
+                        <div class="title-block__button">
+                            <a href="" class="button button__title-block">Заказать</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <script src="js/lib/bootstrap.min.js"></script>
     <script src="js/script-debug.js"></script>
