--- a/src/index.html
+++ b/src/index.html
@@ -8,15 +8,17 @@
 
 <body class="page">
     <header class="header">
-        <div class="container container-xl container-lg">
+        <div class="container">
             <div class="header__container">
                 <a href="#" class="logo__link">
                     <img src="image/logo.svg" alt="logo" class="logo__img">
                 </a>
-                <nav class="header__blok-menu">
+                <div class="menu-burger-btn-wrapper">
                     <a class="menu-burger-btn">
                         <span></span>
                     </a>
+                </div>
+                <nav class="header__blok-menu">
                     <ul class="menu__list">
                         <li class="menu__item">
                             <a href="#services" class="menu__link">Услуги</a>
