--- a/src/index.html
+++ b/src/index.html
@@ -41,10 +41,11 @@
         </div>
     </header>
     <main id="main">
-        <section class=" title-block">
+        <section class="title-block">
+            <div class="title-block__overflow"></div>
             <div class="container">
                 <div class="row">
-                    <div class="col-12 title-block__wrapp">
+                    <div class="col-6 col-xl-8 col-md-10 col-sm-12 title-block__wrapp">
                         <h1 class="title-h1">Разработка интернет-магазина
                             с нуля за неделю</h1>
                         <p class="subtitle title-block__subtitle">Дизайн интернет магазина, элементов микро UX, корзин,
@@ -62,7 +63,7 @@
         <section class="service-design" id="services">
             <div class="container">
                 <div class="row">
-                    <div class="col-12">
+                    <div class="col-12 ">
                         <h2 class="title service-design__title">Что входит в услугу по созданию дизайна
                             интернет-магазина?</h2>
                         <div class="accordion-spoiler">
@@ -241,90 +242,157 @@
                         <h2 class="title examples-store__title">Примеры онлайн-магазинов</h2>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-6 examples-store__flip-card-wrapper">
-                        <a href="#" class="examples-store__flip-card">
-                            <div class="examples-store__flip-card-inner">
-                                <div class="examples-store__flip-card-front">
-                                    <img src="./image/two-miniature.jpg" alt="two-miniature">
-                                </div>
-                                <div class="examples-store__flip-card-back">
-                                    <h5>Онлайн-магазин</h5>
-                                    <p>для оптовых покупок</p>
-                                </div>
+                <div class="examples-store__flip-box">
+                    <div class="row">
+                        <div class="col-6 col-lg-12 examples-store__flip-card-wrapper">
+                            <a href="#" class="examples-store__flip-card">
+                                <div class="examples-store__flip-card-inner">
+                                    <div class="examples-store__flip-card-front">
+                                        <img src="./image/two-miniature.jpg" alt="two-miniature">
+                                    </div>
+                                    <div class="examples-store__flip-card-back">
+                                        <h5>Онлайн-магазин</h5>
+                                        <p>для оптовых покупок</p>
+                                    </div>
 
-                            </div>
-                        </a>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-6 col-lg-12 examples-store__flip-card-wrapper">
+                            <a href="#" class="examples-store__flip-card">
+                                <div class="examples-store__flip-card-inner">
+                                    <div class="examples-store__flip-card-front">
+                                        <img src="./image/baby.jpg" alt="baby">
+                                    </div>
+                                    <div class="examples-store__flip-card-back">
+                                        <h5>Онлайн-магазин</h5>
+                                        <p>для флористов</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
                     </div>
-                    <div class="col-6 examples-store__flip-card-wrapper">
-                        <a href="#" class="examples-store__flip-card">
-                            <div class="examples-store__flip-card-inner">
-                                <div class="examples-store__flip-card-front">
-                                    <img src="./image/baby.jpg" alt="baby">
+                    <div class="row">
+                        <div class="col-6 col-lg-12 examples-store__flip-card-wrapper">
+                            <a href="#" class="examples-store__flip-card">
+                                <div class="examples-store__flip-card-inner">
+                                    <div class="examples-store__flip-card-front">
+                                        <img src="./image/close.jpg" alt="two-miniature">
+                                    </div>
+                                    <div class="examples-store__flip-card-back">
+                                        <h5>Онлайн-магазин</h5>
+                                        <p>для парикмахеров</p>
+                                    </div>
                                 </div>
-                                <div class="examples-store__flip-card-back">
-                                    <h5>Онлайн-магазин</h5>
-                                    <p>для флористов</p>
+                            </a>
+                        </div>
+                        <div class="col-6 col-lg-12 examples-store__flip-card-wrapper">
+                            <a href="#" class="examples-store__flip-card">
+                                <div class="examples-store__flip-card-inner">
+                                    <div class="examples-store__flip-card-front">
+                                        <img src="./image/pexels.jpg" alt="baby">
+                                    </div>
+                                    <div class="examples-store__flip-card-back">
+                                        <h5>Онлайн-магазин</h5>
+                                        <p>для визажистов</p>
+                                    </div>
                                 </div>
-                            </div>
-                        </a>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-6 col-lg-12 examples-store__flip-card-wrapper">
+                            <a href="#" class="examples-store__flip-card">
+                                <div class="examples-store__flip-card-inner">
+                                    <div class="examples-store__flip-card-front">
+                                        <img src="./image/deva-williamson.jpg" alt="two-miniature">
+                                    </div>
+                                    <div class="examples-store__flip-card-back">
+                                        <h5>Онлайн-магазин</h5>
+                                        <p>для кондитеров</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-6 col-lg-12 examples-store__flip-card-wrapper">
+                            <a href="#" class="examples-store__flip-card">
+                                <div class="examples-store__flip-card-inner">
+                                    <div class="examples-store__flip-card-front">
+                                        <img src="./image/color-palette.jpg" alt="baby">
+                                    </div>
+                                    <div class="examples-store__flip-card-back">
+                                        <h5>Онлайн-магазин</h5>
+                                        <p>для художников</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-6 examples-store__flip-card-wrapper">
-                        <a href="#" class="examples-store__flip-card">
-                            <div class="examples-store__flip-card-inner">
-                                <div class="examples-store__flip-card-front">
-                                    <img src="./image/close.jpg" alt="two-miniature">
+                <div class="examples-store__flip-box-mob">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="flip-box-mob__carousel-wrapper">
+                                <div class="flip-box-mob__item-wrapper">
+                                    <div class="flip-box-mob__item">
+                                        <div class="flip-box-mob__img-wrapper">
+                                            <img src="./image/baby-mob.png" alt="baby" class="imge">
+                                        </div>
+                                        <div class="flip-box-mob__img-wrapper">
+                                            <img src="./image/deva-mob.png" alt="deva" class="imge">
+                                        </div>
+                                        <div class="flip-box-mob__img-wrapper">
+                                            <img src="./image/close-mob.png" alt="close" class="imge">
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="examples-store__flip-card-back">
-                                    <h5>Онлайн-магазин</h5>
-                                    <p>для парикмахеров</p>
+                                <div class="flip-box-mob__item-wrapper">
+                                    <div class="flip-box-mob__item">
+                                        <div class="flip-box-mob__img-wrapper">
+                                            <img src="./image/color-mob.png" alt="color" class="imge">
+                                        </div>
+                                        <div class="flip-box-mob__img-wrapper">
+                                            <img src="./image/pexels-mob.png" alt="pexels" class="imge">
+                                        </div>
+                                        <div class="flip-box-mob__img-wrapper">
+                                            <img src="./image/two-miniature-mob.png" alt="two-miniature" class="imge">
+                                        </div>
+                                    </div>
                                 </div>
-
+                                <div class="flip-box-mob__item-wrapper">
+                                    <div class="flip-box-mob__item">
+                                        <div class="flip-box-mob__card-title">
+                                            <h5>Онлайн-магазин</h5>
+                                            <p>для оптовых покупок</p>
+                                        </div>
+                                        <div class="flip-box-mob__card-title">
+                                            <h5>Онлайн-магазин</h5>
+                                            <p>для парикмахеров</p>
+                                        </div>
+                                        <div class="flip-box-mob__card-title">
+                                            <h5>Онлайн-магазин</h5>
+                                            <p>для кондитеров</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="flip-box-mob__item-wrapper">
+                                    <div class="flip-box-mob__item">
+                                        <div class="flip-box-mob__card-title">
+                                            <h5>Онлайн-магазин</h5>
+                                            <p>для флористов</p>
+                                        </div>
+                                        <div class="flip-box-mob__card-title">
+                                            <h5>Онлайн-магазин</h5>
+                                            <p>для визажистов</p>
+                                        </div>
+                                        <div class="flip-box-mob__card-title">
+                                            <h5>Онлайн-магазин</h5>
+                                            <p>для художников</p>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
-                        </a>
-                    </div>
-                    <div class="col-6 examples-store__flip-card-wrapper">
-                        <a href="#" class="examples-store__flip-card">
-                            <div class="examples-store__flip-card-inner">
-                                <div class="examples-store__flip-card-front">
-                                    <img src="./image/pexels.jpg" alt="baby">
-                                </div>
-                                <div class="examples-store__flip-card-back">
-                                    <h5>Онлайн-магазин</h5>
-                                    <p>для визажистов</p>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-6 examples-store__flip-card-wrapper">
-                        <a href="#" class="examples-store__flip-card">
-                            <div class="examples-store__flip-card-inner">
-                                <div class="examples-store__flip-card-front">
-                                    <img src="./image/deva-williamson.jpg" alt="two-miniature">
-                                </div>
-                                <div class="examples-store__flip-card-back">
-                                    <h5>Онлайн-магазин</h5>
-                                    <p>для кондитеров</p>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-6 examples-store__flip-card-wrapper">
-                        <a href="#" class="examples-store__flip-card">
-                            <div class="examples-store__flip-card-inner">
-                                <div class="examples-store__flip-card-front">
-                                    <img src="./image/color-palette.jpg" alt="baby">
-                                </div>
-                                <div class="examples-store__flip-card-back">
-                                    <h5>Онлайн-магазин</h5>
-                                    <p>для художников</p>
-                                </div>
-                            </div>
-                        </a>
+                        </div>
                     </div>
                 </div>
                 <div class="examples-store__img-wrapper-sphere">
@@ -338,8 +406,11 @@
                     <img src="./image/shapeSphereBlu.png" alt="SphereBlu" class="imge">
                 </div>
                 <div class="row">
-                    <div class="col-12">
+                    <div class="col-6 col-lg-12">
                         <h2 class="title more-info__title">Необходимо больше информации?</h2>
+                        <div class="more-info__img-wrapper-title">
+                            <img src="./image/Orders-mob.png" alt="Orders" class="imge">
+                        </div>
                         <p class="subtitle more-info__subtitle">Если Вы владелец онлайн-магазина или только начинаете
                             свой путь в
                             электронной коммерции и вам
@@ -355,10 +426,19 @@
         <section class="discuss-project">
             <div class="container">
                 <div class="row">
-                    <div class="col-12">
+                    <div class="discuss-project__phone-wrapper">
+                        <img src="./image/phone_discuss-project.243.png" alt="phone" class="imge">
+                    </div>
+                    <div class=" discuss-project__sphere-wrapper">
+                        <img src="./image/Group_discuss-project.png" alt="sphere" class="imge">
+                    </div>
+                    <div class="col-12 discuss-project__content-wrapper">
                         <h2 class="title discuss-project__title">Обсудить проект</h2>
                         <p class="subtitle discuss-project__subtitle">Расскажите о своих бизнес-целях и мы поможем вам в
                             их достижении</p>
+                        <div class="discuss-project__postpaid-wrapper">
+                            <img src="./image/Postpaid-mob.png" alt="sphere" class="imge">
+                        </div>
                         <form action="#" id="contactForm" class="discuss-project__form">
                             <div class="discuss-project__form-grup"><input type="text" class="discuss-project__input"
                                     data-required="true" name="yourName" placeholder="Имя" aria-label="Your Name"></div>
@@ -370,6 +450,9 @@
                             <button class="button discuss-project__button " type="submit" name="button">Отправить
                             </button>
                         </form>
+                        <!-- <div class="discuss-project__postpaid-wrapper">
+                            <img src="./image/Postpaid-mob.png" alt="sphere" class="imge">
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -377,8 +460,8 @@
     </main>
     <footer class="footer">
         <div class="container">
-            <div class="row">
-                <div class="col-4">
+            <div class="row footer__mob">
+                <div class="col-4 col-md-12">
                     <a href="#" class="logo__link">
                         <img src="image/logo.svg" alt="logo" class="logo__img footer__logo__img ">
                     </a>
@@ -400,7 +483,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="col-4 footer__phone-blocks-wrapper">
+                <div class="col-4 col-md-12 footer__phone-blocks-wrapper">
                     <div class="footer__phone-blocks">
                         <a href="tel:+79805585949">Валерия: +79805585949</a>
                     </div>
@@ -411,19 +494,19 @@
                         <a href="tel:+79805585949">Валерия: +79805585949</a>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-4 col-md-12 footer__infarmational-block-wrapper">
                     <div class="footer__infarmational-block">
                         <a href="mailto:hr@dv-s.com">hr@dv-s.com</a>
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div col-12>
-                    <p class="footer__copyright">Developers 2018-2021 © All rights reserved</p>
-                </div>
+            <div col-12>
+                <p class="footer__copyright">Developers 2018-2021 © All rights reserved</p>
             </div>
         </div>
     </footer>
+
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
