--- a/src/index.html
+++ b/src/index.html
@@ -485,13 +485,13 @@
                 </div>
                 <div class="col-4 col-md-12 footer__phone-blocks-wrapper">
                     <div class="footer__phone-blocks">
-                        <a href="tel:+79805585949">Валерия: +79805585949</a>
+                        <a href="tel:+79805585949">Валерия: +380(00)000-00-00</a>
                     </div>
                     <div class="footer__phone-blocks">
-                        <a href="tel:+79805585949">Анна: +79805585949</a>
+                        <a href="tel:+79805585949">Анна: +380(00)000-00-00</a>
                     </div>
                     <div class="footer__phone-blocks">
-                        <a href="tel:+79805585949">Валерия: +79805585949</a>
+                        <a href="tel:+79805585949">Валерия: +380(00)000-00-00</a>
                     </div>
                 </div>
                 <div class="col-4 col-md-12 footer__infarmational-block-wrapper">
